Navbar Spacing Bugs

--- a/PersonalWebsite/PersonalWebsite/CSS/jyStyles.css
+++ b/PersonalWebsite/PersonalWebsite/CSS/jyStyles.css
@@ -21,8 +21,8 @@ body {
     height: 50px;
 }
 
-.imageHeader{
-    display:table;
+.imageHeader {
+    display: table;
 }
 
 #headerName {
@@ -37,10 +37,10 @@ body {
 #cover-image-content {
     position: absolute;
     top: 160px;
-    display:block;
-    margin-left:auto;
-    margin-right:auto;
-    width:100%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
     font-family: 'Open Sans', sans-serif;
     color: white;
 }
@@ -264,6 +264,8 @@ a:hover {
 #navlist li a.sm {
     line-height: 48px !important;
     font-size: 18px !important;
+    padding-left: 0px !important;
+    padding-right: 0px !important;
 }
 
 .navbar-header.sm {
@@ -276,13 +278,12 @@ a:hover {
     margin: 0;
     background-color: #070716;
     padding-left: 20px;
+    padding-bottom:12px;
 }
 
 #navlist li.sm {
     display: inline;
     list-style-type: none;
-    padding-left: 0px;
-    padding-right: 0px;
     line-height: normal;
     text-align: center;
 }
